--- a/src/main/resources/static/css/index.css
+++ b/src/main/resources/static/css/index.css
@@ -6,24 +6,27 @@ body{
 .main-section{
 	margin:0 auto;
 	margin-top:25%;
-	padding: 0;
+	padding: 0px;
 }
 
 .modal-content{
 	background-color: #3b4652;
-	opacity: .85;
-	padding: 0 20px;
+	opacity: .95;
+	padding: 10px 10px 20px;
 	box-shadow: 0px 0px 3px #848484;
 }
 
 .user-img{
-    margin-top: -90px;
-    margin-bottom: 50px;
+    margin-top: -10px;
+    margin-bottom: 300px;
+    padding: 50px 50px 50px;
 }
 
 .user-img img{
-    width: 100xp;
-    height: 100px;
+    width: 50xp;
+    height: 50px;
+    opacity: .99;
+    padding: 20px 20px;
     box-shadow: 0px 0px 3px #848484;
     border-radius: 50%;
 }
