--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -25,12 +25,12 @@
 				<div clas="col-12 user-img">
                     <img src="static/img/user1.png" th:src="@{/img/user1.png}"/>
 				</div>
-                <form class="col-12" th:action="@{/login}" method="get">
+                <form class="col-12" th:action="@{/login}" method="post">
 					<div class="form-group" id="user-group">
-						<input type="text" class="form-control" placeholder="Nombre de usuario"/>
+						<input type="text" class="form-control" placeholder="Nombre de usuario" name="username"/>
 					</div>
 					<div class="form-group" id="contrasena-group">
-						<input type="password" class="form-control" placeholder="Contrasena"/>
+						<input type="password" class="form-control" placeholder="Contrasena" name="password"/>
 					</div>
 					<button type="submit" class="btn btn-primary"><i class="fas fa-sign-in-alt"></i>  Ingresar </button>		
 				</form>
