--- a/src/main/resources/templates/user-form/change-password.html
+++ b/src/main/resources/templates/user-form/change-password.html
@@ -8,10 +8,10 @@
         </button>
       </div>
       <div class="modal-body">
-        <form th:action="@{/editUser/changePassword}"
-				id="changePasswordForm" th:object="${passwordForm}" method="post" class="form" role="form">
+        <form id="changePasswordForm" th:object="${passwordForm}" method="post" class="form" role="form">
 			<input class="form-control" type="hidden" th:field="${passwordForm.id}">
-			<div class="form-group row">
+			<input th:if="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}"  type="hidden" id="currentPassword" th:value="blank"  />
+			<div th:unless="${#authorization.expression('hasRole(''ROLE_ADMIN'')')}" class="form-group row">
 				<label class="col-lg-3 col-form-label 	form-control-label">Current Password</label>
 				<div class="col-lg-9">
 					<input class="form-control" type="password" th:field="${passwordForm.currentPassword}">
@@ -73,6 +73,7 @@ function submitChangePassword(){
         },
         error: function (e) {
             $("#changePasswordError").removeClass( "d-none" );
+        	$("#formSuccess").addClass( "d-none" );            
             $("#changePasswordError").html(e.responseText);
         }
     });
