--- a/src/main/resources/templates/user-form/user-view.html
+++ b/src/main/resources/templates/user-form/user-view.html
@@ -8,7 +8,7 @@
  		src="https://code.jquery.com/jquery-3.3.1.min.js"
  			integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
  			crossorigin="anonymous"></script>
-	
+		<!-- FRAMEWORK BOOTSTRAP para el estilo de la pagina-->
 	<link rel="stylesheet"
 		href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
 	<script
@@ -49,7 +49,7 @@
 			<a class="nav-link" th:classappend=" ${formTab}" id="form-tab" data-toggle="tab" href="#form" role="tab" aria-controls="form" aria-selected="true">Form</a>				   	
 			</li>
 			<li class="nav-item">
-			<!-- <a class="nav-link" href="#" th:href="@{/logout}"><span th:text="${#authentication.getPrincipal().getUsername()}"></span> - <span>logout  </span><span class="float-right"><i class="fas fa-sign-out-alt"></i></span></a> -->				   	
+			<a class="nav-link" href="#" th:href="@{/logout}"> <spanth:text="${#suthentication.getPrincipal().getUsername()}"></span > - <span>logout</span><span class="float-right"><i class="fas fa-sign-out-alt"></i></span></a>			   	
 			</li>
 		</ul>
 		<div class="tab-content" id="myTabContent">
